--- a/proj2/assets/css/stylesheet.css
+++ b/proj2/assets/css/stylesheet.css
@@ -44,6 +44,11 @@ body {
   color: #4c4d4d;
 }
 
+/* Added this here. */
+figcaption {
+  text-align: center;
+}
+
 /*-------- Preloader --------*/
 .preloader {
   position: fixed;
