Task 2 write-up

--- a/proj2/assets/css/stylesheet.css
+++ b/proj2/assets/css/stylesheet.css
@@ -49,6 +49,12 @@ figcaption {
   text-align: center;
 }
 
+#centerImage
+{
+ text-align:center;
+ display:block;
+}
+
 /*-------- Preloader --------*/
 .preloader {
   position: fixed;
